@@ -43,59 +43,40 @@ sk_sp<SkImage> make_color_space(sk_sp<SkImage> orig, sk_sp<SkColorSpace> colorSp
     if (colorSpace->gammaIsLinear()) {
         srgb = SkColorSpace::MakeSRGBLinear();
     }
-    return SkImageMakeRasterCopyAndAssignColorSpace(xform.get(), srgb.get());
+    return xform->reinterpretColorSpace(std::move(srgb));
 }
 
-class MakeCSGM : public skiagm::GM {
-public:
-    MakeCSGM() {}
+DEF_SIMPLE_GM_CAN_FAIL(makecolorspace, canvas, errorMsg, 128 * 3, 128 * 4) {
+    sk_sp<SkColorSpace> wideGamut = SkColorSpace::MakeRGB(SkNamedTransferFn::kSRGB,
+                                                          SkNamedGamut::kAdobeRGB);
+    sk_sp<SkColorSpace> wideGamutLinear = wideGamut->makeLinearGamma();
 
-protected:
-    SkString onShortName() override {
-        return SkString("makecolorspace");
+    // Lazy images
+    sk_sp<SkImage> opaqueImage = GetResourceAsImage("images/mandrill_128.png");
+    sk_sp<SkImage> premulImage = GetResourceAsImage("images/color_wheel.png");
+    if (!opaqueImage || !premulImage) {
+        *errorMsg = "Failed to load images. Did you forget to set the resourcePath?";
+        return skiagm::DrawResult::kFail;
     }
+    canvas->drawImage(opaqueImage, 0.0f, 0.0f);
+    canvas->drawImage(make_color_space(opaqueImage, wideGamut), 128.0f, 0.0f);
+    canvas->drawImage(make_color_space(opaqueImage, wideGamutLinear), 256.0f, 0.0f);
+    canvas->drawImage(premulImage, 0.0f, 128.0f);
+    canvas->drawImage(make_color_space(premulImage, wideGamut), 128.0f, 128.0f);
+    canvas->drawImage(make_color_space(premulImage, wideGamutLinear), 256.0f, 128.0f);
+    canvas->translate(0.0f, 256.0f);
 
-    SkISize onISize() override {
-        return SkISize::Make(128*3, 128*4);
-    }
-
-    DrawResult onDraw(SkCanvas* canvas, SkString* errorMsg) override {
-        sk_sp<SkColorSpace> wideGamut = SkColorSpace::MakeRGB(SkNamedTransferFn::kSRGB,
-                                                              SkNamedGamut::kAdobeRGB);
-        sk_sp<SkColorSpace> wideGamutLinear = wideGamut->makeLinearGamma();
-
-        // Lazy images
-        sk_sp<SkImage> opaqueImage = GetResourceAsImage("images/mandrill_128.png");
-        sk_sp<SkImage> premulImage = GetResourceAsImage("images/color_wheel.png");
-        if (!opaqueImage || !premulImage) {
-            *errorMsg = "Failed to load images. Did you forget to set the resourcePath?";
-            return DrawResult::kFail;
-        }
-        canvas->drawImage(opaqueImage, 0.0f, 0.0f);
-        canvas->drawImage(make_color_space(opaqueImage, wideGamut), 128.0f, 0.0f);
-        canvas->drawImage(make_color_space(opaqueImage, wideGamutLinear), 256.0f, 0.0f);
-        canvas->drawImage(premulImage, 0.0f, 128.0f);
-        canvas->drawImage(make_color_space(premulImage, wideGamut), 128.0f, 128.0f);
-        canvas->drawImage(make_color_space(premulImage, wideGamutLinear), 256.0f, 128.0f);
-        canvas->translate(0.0f, 256.0f);
-
-        // Raster images
-        opaqueImage = make_raster_image("images/mandrill_128.png");
-        premulImage = make_raster_image("images/color_wheel.png");
-        canvas->drawImage(opaqueImage, 0.0f, 0.0f);
-        canvas->drawImage(make_color_space(opaqueImage, wideGamut), 128.0f, 0.0f);
-        canvas->drawImage(make_color_space(opaqueImage, wideGamutLinear), 256.0f, 0.0f);
-        canvas->drawImage(premulImage, 0.0f, 128.0f);
-        canvas->drawImage(make_color_space(premulImage, wideGamut), 128.0f, 128.0f);
-        canvas->drawImage(make_color_space(premulImage, wideGamutLinear), 256.0f, 128.0f);
-        return DrawResult::kOk;
-    }
-
-private:
-    typedef skiagm::GM INHERITED;
-};
-
-DEF_GM(return new MakeCSGM;)
+    // Raster images
+    opaqueImage = make_raster_image("images/mandrill_128.png");
+    premulImage = make_raster_image("images/color_wheel.png");
+    canvas->drawImage(opaqueImage, 0.0f, 0.0f);
+    canvas->drawImage(make_color_space(opaqueImage, wideGamut), 128.0f, 0.0f);
+    canvas->drawImage(make_color_space(opaqueImage, wideGamutLinear), 256.0f, 0.0f);
+    canvas->drawImage(premulImage, 0.0f, 128.0f);
+    canvas->drawImage(make_color_space(premulImage, wideGamut), 128.0f, 128.0f);
+    canvas->drawImage(make_color_space(premulImage, wideGamutLinear), 256.0f, 128.0f);
+    return skiagm::DrawResult::kOk;
+}
 
 DEF_SIMPLE_GM_BG(makecolortypeandspace, canvas, 128 * 3, 128 * 4, SK_ColorWHITE) {
     sk_sp<SkImage> images[] = {
@@ -142,4 +123,53 @@ DEF_SIMPLE_GM_BG(makecolortypeandspace, canvas, 128 * 3, 128 * 4, SK_ColorWHITE)
             canvas->translate(0, 128);
         }
     }
+}
+
+DEF_SIMPLE_GM_CAN_FAIL(reinterpretcolorspace, canvas, errorMsg, 128 * 3, 128 * 3) {
+    // We draw a 3x3 grid. The three rows are lazy (encoded), raster, and GPU (or another copy of
+    // raster so all configs look similar). In each row, we draw three variants:
+    // - The original image (should look normal).
+    // - The image, reinterpreted as being in the color-spin space. The pixel data isn't changed,
+    //   so in untagged configs, this looks like the first column. In tagged configs, this has the
+    //   the effect of rotating the colors (RGB -> GBR).
+    // - The image converted to the color-spin space, then reinterpreted as being sRGB. In all
+    //   configs, this appears to be spun backwards (RGB -> BRG), and tests the composition of
+    //   these two APIs.
+
+    // In all cases, every column should be identical. In tagged configs, the 'R' in the columns
+    // should be Red, Green, Blue.
+
+    sk_sp<SkColorSpace> srgb = SkColorSpace::MakeSRGB();
+    sk_sp<SkColorSpace> spin = srgb->makeColorSpin();
+    sk_sp<SkImage> image = GetResourceAsImage("images/color_wheel.png");
+    if (!image) {
+        *errorMsg = "Failed to load image. Did you forget to set the resourcePath?";
+        return skiagm::DrawResult::kFail;
+    }
+
+    // Lazy images
+    canvas->drawImage(image, 0.0f, 0.0f);
+    canvas->drawImage(image->reinterpretColorSpace(spin), 128.0f, 0.0f);
+    canvas->drawImage(image->makeColorSpace(spin)->reinterpretColorSpace(srgb), 256.0f, 0.0f);
+
+    canvas->translate(0.0f, 128.0f);
+
+    // Raster images
+    image = image->makeRasterImage();
+    canvas->drawImage(image, 0.0f, 0.0f);
+    canvas->drawImage(image->reinterpretColorSpace(spin), 128.0f, 0.0f);
+    canvas->drawImage(image->makeColorSpace(spin)->reinterpretColorSpace(srgb), 256.0f, 0.0f);
+
+    canvas->translate(0.0f, 128.0f);
+
+    // GPU images
+    if (canvas->getGrContext()) {
+        image = image->makeTextureImage(canvas->getGrContext(), nullptr);
+    }
+
+    canvas->drawImage(image, 0.0f, 0.0f);
+    canvas->drawImage(image->reinterpretColorSpace(spin), 128.0f, 0.0f);
+    canvas->drawImage(image->makeColorSpace(spin)->reinterpretColorSpace(srgb), 256.0f, 0.0f);
+
+    return skiagm::DrawResult::kOk;
 }
