@@ -91,11 +91,4 @@ void SkImage_unpinAsTexture(const SkImage*, GrContext*);
  */
 SkIRect SkImage_getSubset(const SkImage*);
 
-/**
- *  Returns a new image containing the same pixel values as the source, but with a different color
- *  space assigned. This performs no color space conversion. Primarily used in tests, to visualize
- *  the results of rendering in wide or narrow gamuts.
- */
-sk_sp<SkImage> SkImageMakeRasterCopyAndAssignColorSpace(const SkImage*, SkColorSpace*);
-
 #endif
